--- a/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
+++ b/src/GUI/CEOWindow/UI/Ui_CEOWindow.ui
@@ -245,7 +245,7 @@ QToolButton:hover
        </rect>
       </property>
       <property name="text">
-       <string>我的店铺</string>
+       <string>审核合同</string>
       </property>
      </widget>
      <widget class="QToolButton" name="btnAllShop">
@@ -277,32 +277,6 @@ QToolButton:hover
        <string>我的信息</string>
       </property>
      </widget>
-     <widget class="QToolButton" name="btnContract">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>150</y>
-        <width>150</width>
-        <height>50</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>我的合同</string>
-      </property>
-     </widget>
-     <widget class="QToolButton" name="btnSublease">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>200</y>
-        <width>150</width>
-        <height>50</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>申请转租</string>
-      </property>
-     </widget>
     </widget>
    </widget>
    <widget class="QStackedWidget" name="stackedWidget">
@@ -320,16 +294,16 @@ background:rgb(234, 234, 234)
 }</string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="AllShop">
      <widget class="QLabel" name="allShop">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>0</y>
+        <x>10</x>
+        <y>10</y>
         <width>91</width>
-        <height>41</height>
+        <height>30</height>
        </rect>
       </property>
       <property name="styleSheet">
@@ -366,7 +340,7 @@ background:rgb(234, 234, 234)
 </string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="_1f">
        <widget class="QWidget" name="firstFloorShop" native="true">
@@ -1540,9 +1514,9 @@ background:transparent;</string>
       <property name="geometry">
        <rect>
         <x>360</x>
-        <y>110</y>
-        <width>40</width>
-        <height>20</height>
+        <y>105</y>
+        <width>51</width>
+        <height>25</height>
        </rect>
       </property>
      </widget>
@@ -1607,297 +1581,366 @@ background:transparent;</string>
         <x>10</x>
         <y>10</y>
         <width>101</width>
-        <height>31</height>
+        <height>30</height>
        </rect>
       </property>
       <property name="styleSheet">
        <string notr="true">font-size:22px</string>
       </property>
       <property name="text">
-       <string>我的店铺</string>
+       <string>审核合同</string>
       </property>
      </widget>
-     <widget class="QWidget" name="Receipt" native="true">
+     <widget class="QWidget" name="widget" native="true">
       <property name="geometry">
        <rect>
-        <x>0</x>
-        <y>100</y>
-        <width>521</width>
-        <height>471</height>
+        <x>299</x>
+        <y>70</y>
+        <width>541</width>
+        <height>480</height>
        </rect>
       </property>
       <property name="styleSheet">
-       <string notr="true">font-size:20px</string>
+       <string notr="true">QLabel
+{
+font-size:18px;
+}
+</string>
       </property>
-      <widget class="QLabel" name="electricChargeLabel">
+      <widget class="QLabel" name="label_16">
        <property name="geometry">
         <rect>
-         <x>60</x>
-         <y>40</y>
-         <width>90</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>应缴电费：</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="guaranteeChargeLabel">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>80</y>
-         <width>80</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>保证金：</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="propertyFeeChargeLabel">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>120</y>
-         <width>110</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>应缴物业费：</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="waterChargeLabel">
-       <property name="geometry">
-        <rect>
-         <x>60</x>
-         <y>160</y>
-         <width>100</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>应缴水费：</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="guaranteeCharge">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>80</y>
-         <width>80</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="electricCharge">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>40</y>
-         <width>80</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="propertyFeeCharge">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>120</y>
-         <width>80</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="waterCharge">
-       <property name="geometry">
-        <rect>
-         <x>180</x>
-         <y>160</y>
-         <width>81</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>TextLabel</string>
-       </property>
-      </widget>
-      <widget class="QPushButton" name="PayImmediately">
-       <property name="geometry">
-        <rect>
-         <x>300</x>
-         <y>220</y>
-         <width>80</width>
-         <height>30</height>
+         <x>20</x>
+         <y>20</y>
+         <width>91</width>
+         <height>21</height>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">font-size:15px;
-background:transparent;
-</string>
+        <string notr="true">font-size:20px</string>
        </property>
        <property name="text">
-        <string>立即缴费</string>
+        <string>租赁合同</string>
        </property>
       </widget>
-     </widget>
-     <widget class="QPushButton" name="ReceiptCharge">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>70</y>
-        <width>80</width>
-        <height>30</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">
-background:transparent;
-</string>
-      </property>
-      <property name="text">
-       <string>我的账单</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="ReceivableCharge">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>70</y>
-        <width>80</width>
-        <height>30</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">
-background:transparent;
-</string>
-      </property>
-      <property name="text">
-       <string>已缴费用</string>
-      </property>
-     </widget>
-     <widget class="QWidget" name="Receivable" native="true">
-      <property name="geometry">
-       <rect>
-        <x>270</x>
-        <y>100</y>
-        <width>561</width>
-        <height>471</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font-size:20px</string>
-      </property>
-      <widget class="QLabel" name="guaranteeReceivable">
+      <widget class="QLabel" name="label_24">
        <property name="geometry">
         <rect>
-         <x>220</x>
-         <y>190</y>
-         <width>80</width>
-         <height>30</height>
+         <x>30</x>
+         <y>50</y>
+         <width>91</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
-        <string>TextLabel</string>
+        <string>合同内容：</string>
        </property>
       </widget>
-      <widget class="QLabel" name="guaranteeChargeLabel_3">
+      <widget class="QTextEdit" name="contractContent">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>190</y>
-         <width>80</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>已缴保证金：</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="electricChargeLabel_3">
-       <property name="geometry">
-        <rect>
-         <x>100</x>
+         <x>30</x>
          <y>70</y>
+         <width>480</width>
+         <height>311</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_26">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>450</y>
          <width>90</width>
-         <height>30</height>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
-        <string>电费余额：</string>
+        <string>签订年份：</string>
        </property>
       </widget>
-      <widget class="QLabel" name="waterReceivable">
+      <widget class="QLabel" name="label_27">
        <property name="geometry">
         <rect>
-         <x>220</x>
-         <y>110</y>
+         <x>30</x>
+         <y>420</y>
+         <width>121</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>业主联系方式：</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_28">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>390</y>
+         <width>71</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>店铺号：</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_29">
+       <property name="geometry">
+        <rect>
+         <x>300</x>
+         <y>390</y>
+         <width>91</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>审核确认：</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_30">
+       <property name="geometry">
+        <rect>
+         <x>300</x>
+         <y>420</y>
+         <width>91</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>确认签字：</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="processingConfirmation">
+       <property name="geometry">
+        <rect>
+         <x>410</x>
+         <y>450</y>
+         <width>75</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>确认操作</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="shopNun">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>390</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="userTel">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>420</y>
+         <width>131</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="contractConfirm">
+       <property name="geometry">
+        <rect>
+         <x>390</x>
+         <y>390</y>
+         <width>71</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>确认</string>
+       </property>
+       <property name="checkable">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="ceoSignature">
+       <property name="geometry">
+        <rect>
+         <x>390</x>
+         <y>420</y>
+         <width>71</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>签字</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="rentTime">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>450</y>
+         <width>113</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="widget_9" native="true">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>70</y>
+        <width>261</width>
+        <height>111</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel
+{
+font-size:16px;
+}
+</string>
+      </property>
+      <widget class="QLabel" name="label_17">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>121</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font-size:20px</string>
+       </property>
+       <property name="text">
+        <string>待审核合同</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_23">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>40</y>
+         <width>101</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>剩余审核数量：</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="residualAuditNum">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>40</y>
+         <width>61</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_25">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>70</y>
          <width>81</width>
-         <height>30</height>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
-        <string>TextLabel</string>
+        <string>审核合同：</string>
        </property>
       </widget>
-      <widget class="QLabel" name="propertyFeeReceivable">
+      <widget class="QComboBox" name="residualAudit">
        <property name="geometry">
         <rect>
-         <x>220</x>
-         <y>150</y>
-         <width>80</width>
-         <height>30</height>
+         <x>110</x>
+         <y>70</y>
+         <width>140</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QWidget" name="widget_10" native="true">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>200</y>
+        <width>261</width>
+        <height>151</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel
+{
+font-size:16px;
+}
+</string>
+      </property>
+      <widget class="QLabel" name="label_31">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>10</y>
+         <width>81</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
-        <string>TextLabel</string>
+        <string>已审理合同</string>
        </property>
       </widget>
-      <widget class="QLabel" name="waterChargeLabel_3">
+      <widget class="QLabel" name="label_32">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>110</y>
+         <x>30</x>
+         <y>40</y>
          <width>100</width>
-         <height>30</height>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
-        <string>水费余额：</string>
+        <string>已审理数量：</string>
        </property>
       </widget>
-      <widget class="QLabel" name="propertyFeeChargeLabel_3">
+      <widget class="QLabel" name="label_33">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>150</y>
-         <width>110</width>
-         <height>30</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>已缴物业费：</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="electricReceivable">
-       <property name="geometry">
-        <rect>
-         <x>220</x>
+         <x>30</x>
          <y>70</y>
          <width>80</width>
-         <height>30</height>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>已审合同：</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="quantityAudited">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>70</y>
+         <width>140</width>
+         <height>20</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="quantityAuditedNum">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>40</y>
+         <width>54</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="text">
@@ -1905,11 +1948,6 @@ background:transparent;
        </property>
       </widget>
      </widget>
-     <zorder>myShop</zorder>
-     <zorder>ReceiptCharge</zorder>
-     <zorder>ReceivableCharge</zorder>
-     <zorder>Receipt</zorder>
-     <zorder>Receivable</zorder>
     </widget>
     <widget class="QWidget" name="MyInformation">
      <widget class="QLabel" name="myInformation">
@@ -1923,36 +1961,6 @@ background:transparent;
       </property>
       <property name="text">
        <string>我的信息</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="MyContract">
-     <widget class="QLabel" name="myContract">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>20</y>
-        <width>54</width>
-        <height>12</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>我的合同</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="ApplyForSublease">
-     <widget class="QLabel" name="applyForSublease">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>20</y>
-        <width>54</width>
-        <height>12</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>申请转租</string>
       </property>
      </widget>
     </widget>
